fixed nav bar mobile sizing and spacing, i hope

--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -335,7 +335,6 @@ footer {
 
    .top {
     gap: 10px;
-    top: 8.5%;
    }
 
    .top a {
@@ -348,12 +347,11 @@ footer {
     padding-right: 12px;
     padding-top: 7px;
     padding-bottom: 7px;
-    font-size: 12px !important;
+    font-size: 10px !important;
    }
 
    header p {
     font-size: $font-p-mobile;
-    top: 9.25%;
    }
 
    .blog-link {
